# paris_elections

./: .gitignore  PLAN_AMELIORATIONS.md  app.py  pyproject.toml
notebooks/: 01_data_exploration.ipynb  02_redressement_calibration.ipynb  03_simulation.ipynb  04_scenario_comparison.ipynb
paris_elections/: __init__.py  config.py
paris_elections/data/: __init__.py  cache.py  insee.py  loader.py  opendata_paris.py  schemas.py
paris_elections/engine/: __init__.py  allocation.py  interround.py  mayor.py  round1.py  round2.py  simulation.py
paris_elections/redressement/: __init__.py  calibration.py  model.py  political_families.py
paris_elections/scenarios/: __init__.py  montecarlo.py  scenario.py
paris_elections/viz/: __init__.py  charts.py  dashboard.py  hemicycle.py  maps.py
tests/: test_allocation.py  test_redressement.py  test_simulation.py
