[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "paris-elections"
version = "0.1.0"
description = "Simulation des élections municipales parisiennes 2026"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "pydantic>=2.0",
    "scipy>=1.11",
    "requests>=2.31",
    "folium>=0.15",
    "plotly>=5.18",
    "matplotlib>=3.8",
    "ipywidgets>=8.1",
    "jupyter>=1.0",
    "pyarrow>=14.0",
]

[project.optional-dependencies]
geo = ["geopandas>=0.14"]
dev = ["pytest>=7.4", "pytest-cov>=4.1"]

[tool.pytest.ini_options]
testpaths = ["tests"]
